--- a/catkin_ws/src/robot_gazebo/package.xml
+++ b/catkin_ws/src/robot_gazebo/package.xml
@@ -4,7 +4,7 @@
 <version>0.0.0</version>
 <description>The robot_gazebo package</description>
 
-<maintainer email="joaocarlosmrp@gmail.com">joaocarlosmrp</maintainer>
+<maintainer email="frederico.m.lps@gmail.com">Frederico-lp</maintainer>
 
 <license>TODO</license>
 
